--- a/Scrape_Script.ipynb
+++ b/Scrape_Script.ipynb
@@ -2,102 +2,154 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "id": "091c9834-a1f9-4b4f-9618-c9e2f290d4d0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# from selenium import webdriver\n",
-    "\n",
-    "\n",
-    "# PATH = \"C:\\SeleniumDrivers\\chromedriver.exe\"\n",
-    "# driver = webdriver.Chrome(PATH)\n",
-    "\n",
-    "# driver.get(\"https://www.startupsg.gov.sg/directory/startups/\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 121,
-   "id": "b291e056-cf11-4f9f-9d97-4b78cf7ce87a",
+   "execution_count": 197,
+   "id": "94077bdc-b7d7-4043-8324-6e38d38c0c20",
    "metadata": {},
    "outputs": [],
    "source": [
     "# importing libraries \n",
     "import os   # library to import chromedrive.exe\n",
     "from selenium import webdriver\n",
-    "from selenium.webdriver.common.keys import Keys\n",
+    "from selenium.webdriver.common.keys import Keys # assign keyboard commands\n",
     "from selenium.webdriver.common.by import By # for locating elements in pages\n",
+    "from selenium.webdriver.chrome.options import Options as ChromeOptions\n",
+    "from selenium.webdriver.support.ui import Select\n",
+    "\n",
+    "# for conditional walt or Explict wait\n",
     "from selenium.webdriver.support.ui import WebDriverWait\n",
-    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "from selenium.webdriver.support import expected_conditions as EC \n",
     "\n",
     "os.environ[\"PATH\"] += r\"C:\\SeleniumDrivers\\chromedriver.exe\" # importing chromedrive.exe from path location using os\n",
     "                                                             # this is standard, and must be done if you want ot run the script on another server \n",
     "    \n",
-    "driver.implicitly_wait(15)\n",
     "driver= webdriver.Chrome()\n",
-    "driver.get(\"https://www.startupsg.gov.sg/directory/startups/?sort=-changed&q\") # getting website "
+    "\n",
+    "import pandas as pd "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "id": "9881fabf-d831-4692-8375-88630eb40746",
+   "execution_count": 198,
+   "id": "8f81c82c-bced-4bff-80ff-81bb0e882c4a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Quiting browser and closing tabs \n",
-    "# driver.close() # close the website tab on the browser\n",
-    "# driver.quit() # quits the browser"
+    "driver.implicitly_wait(10)\n",
+    "driver.get(\"https://www.startupsg.gov.sg/directory/startups/?sort=-changed&q\") # getting website\n",
+    "driver.maximize_window() # maximizing browser window"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "id": "c4466258-3d70-4d6f-8a49-87dfd7962e78",
+   "execution_count": 199,
+   "id": "d303ca37-118c-48df-bc87-124c81efcfe7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Selecting Funding stage\n",
+    "\n",
+    "fundingstage = driver.find_element(By.CSS_SELECTOR,'div.directory__filters > div > div > div:nth-child(2) > div > div > div') # clicking on the funding button\n",
+    "fundingstage.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "id": "3abd239d-b2a5-48c0-aa28-b6c2df379b99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filter Funding Stage\n",
+    "stage = driver.find_element(By.CSS_SELECTOR,'div.filter.directory__filter.active > div.filter-panel > div > div:nth-child(2) > div > div > div > label') # selecting stage\n",
+    "stage.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "id": "0ea456b4-f8c3-45db-a37b-ee0f3eaffc3a",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\JEFFRE~1\\AppData\\Local\\Temp/ipykernel_13360/3581255925.py:6: DeprecationWarning: find_element_by_* commands are deprecated. Please use find_element() instead\n",
-      "  loginbutton= driver.find_element_by_xpath('//*[@id=\"app\"]/div[13]/div/div[1]/aside/div[1]/a')\n"
-     ]
-    },
-    {
-     "ename": "NoSuchElementException",
-     "evalue": "Message: no such element: Unable to locate element: {\"method\":\"xpath\",\"selector\":\"//*[@id=\"app\"]/div[13]/div/div[1]/aside/div[1]/a\"}\n  (Session info: chrome=100.0.4896.88)\nStacktrace:\nBacktrace:\n\tOrdinal0 [0x006A7413+2389011]\n\tOrdinal0 [0x00639F61+1941345]\n\tOrdinal0 [0x0052C658+837208]\n\tOrdinal0 [0x005591DD+1020381]\n\tOrdinal0 [0x0055949B+1021083]\n\tOrdinal0 [0x00586032+1204274]\n\tOrdinal0 [0x00574194+1130900]\n\tOrdinal0 [0x00584302+1196802]\n\tOrdinal0 [0x00573F66+1130342]\n\tOrdinal0 [0x0054E546+976198]\n\tOrdinal0 [0x0054F456+980054]\n\tGetHandleVerifier [0x00859632+1727522]\n\tGetHandleVerifier [0x0090BA4D+2457661]\n\tGetHandleVerifier [0x0073EB81+569713]\n\tGetHandleVerifier [0x0073DD76+566118]\n\tOrdinal0 [0x00640B2B+1968939]\n\tOrdinal0 [0x00645988+1989000]\n\tOrdinal0 [0x00645A75+1989237]\n\tOrdinal0 [0x0064ECB1+2026673]\n\tBaseThreadInitThunk [0x76B7FA29+25]\n\tRtlGetAppContainerNamedObjectPath [0x77217A7E+286]\n\tRtlGetAppContainerNamedObjectPath [0x77217A4E+238]\n",
+     "ename": "NameError",
+     "evalue": "name 'select' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNoSuchElementException\u001b[0m                    Traceback (most recent call last)",
-      "\u001b[1;32mC:\\Users\\JEFFRE~1\\AppData\\Local\\Temp/ipykernel_13360/3581255925.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# menubutton.click() # clicking menu button\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mloginbutton\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mdriver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_element_by_xpath\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'//*[@id=\"app\"]/div[13]/div/div[1]/aside/div[1]/a'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[0mloginbutton\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclick\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\envs\\py3\\lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py\u001b[0m in \u001b[0;36mfind_element_by_xpath\u001b[1;34m(self, xpath)\u001b[0m\n\u001b[0;32m    518\u001b[0m             \u001b[0mstacklevel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    519\u001b[0m         )\n\u001b[1;32m--> 520\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_element\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mby\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mBy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mXPATH\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mxpath\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    521\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    522\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mfind_elements_by_xpath\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mxpath\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[0mWebElement\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\envs\\py3\\lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py\u001b[0m in \u001b[0;36mfind_element\u001b[1;34m(self, by, value)\u001b[0m\n\u001b[0;32m   1242\u001b[0m             \u001b[0mvalue\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'[name=\"%s\"]'\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1243\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1244\u001b[1;33m         return self.execute(Command.FIND_ELEMENT, {\n\u001b[0m\u001b[0;32m   1245\u001b[0m             \u001b[1;34m'using'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mby\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1246\u001b[0m             'value': value})['value']\n",
-      "\u001b[1;32m~\\anaconda3\\envs\\py3\\lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py\u001b[0m in \u001b[0;36mexecute\u001b[1;34m(self, driver_command, params)\u001b[0m\n\u001b[0;32m    422\u001b[0m         \u001b[0mresponse\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcommand_executor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdriver_command\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    423\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mresponse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 424\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0merror_handler\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcheck_response\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    425\u001b[0m             response['value'] = self._unwrap_value(\n\u001b[0;32m    426\u001b[0m                 response.get('value', None))\n",
-      "\u001b[1;32m~\\anaconda3\\envs\\py3\\lib\\site-packages\\selenium\\webdriver\\remote\\errorhandler.py\u001b[0m in \u001b[0;36mcheck_response\u001b[1;34m(self, response)\u001b[0m\n\u001b[0;32m    245\u001b[0m                 \u001b[0malert_text\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'alert'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'text'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    246\u001b[0m             \u001b[1;32mraise\u001b[0m \u001b[0mexception_class\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscreen\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstacktrace\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0malert_text\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# type: ignore[call-arg]  # mypy is not smart enough here\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 247\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mexception_class\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscreen\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstacktrace\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    248\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    249\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_value_or_default\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mobj\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mMapping\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0m_KT\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_VT\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0m_KT\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdefault\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0m_VT\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[0m_VT\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNoSuchElementException\u001b[0m: Message: no such element: Unable to locate element: {\"method\":\"xpath\",\"selector\":\"//*[@id=\"app\"]/div[13]/div/div[1]/aside/div[1]/a\"}\n  (Session info: chrome=100.0.4896.88)\nStacktrace:\nBacktrace:\n\tOrdinal0 [0x006A7413+2389011]\n\tOrdinal0 [0x00639F61+1941345]\n\tOrdinal0 [0x0052C658+837208]\n\tOrdinal0 [0x005591DD+1020381]\n\tOrdinal0 [0x0055949B+1021083]\n\tOrdinal0 [0x00586032+1204274]\n\tOrdinal0 [0x00574194+1130900]\n\tOrdinal0 [0x00584302+1196802]\n\tOrdinal0 [0x00573F66+1130342]\n\tOrdinal0 [0x0054E546+976198]\n\tOrdinal0 [0x0054F456+980054]\n\tGetHandleVerifier [0x00859632+1727522]\n\tGetHandleVerifier [0x0090BA4D+2457661]\n\tGetHandleVerifier [0x0073EB81+569713]\n\tGetHandleVerifier [0x0073DD76+566118]\n\tOrdinal0 [0x00640B2B+1968939]\n\tOrdinal0 [0x00645988+1989000]\n\tOrdinal0 [0x00645A75+1989237]\n\tOrdinal0 [0x0064ECB1+2026673]\n\tBaseThreadInitThunk [0x76B7FA29+25]\n\tRtlGetAppContainerNamedObjectPath [0x77217A7E+286]\n\tRtlGetAppContainerNamedObjectPath [0x77217A4E+238]\n"
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mC:\\Users\\JEFFRE~1\\AppData\\Local\\Temp/ipykernel_12012/2479600454.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# status = driver.find_element(By.TAG_NAME,'Activity Status')\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0macitve\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mselect\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdriver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_element\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mBy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mCSS_SELECTOR\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'div:nth-child(14) > div:nth-child(1) > div > div > div > label'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[0mactive\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mselect_by_visible_text\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Acitve'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'select' is not defined"
      ]
     }
    ],
    "source": [
-    "# Login to Dashboard\n",
+    "#  More Filter - Active Status\n",
+    "activestatus = driver.find_element(By.CSS_SELECTOR, 'div a[class*=\"link-more-filters\"]')\n",
+    "activestatus.click()\n",
     "\n",
-    "# menubutton= driver.find_element_by_class_name('v-ripple__container') # identifying menu button\n",
-    "# menubutton.click() # clicking menu button\n",
+    "try:\n",
+    "    acitve= driver.find_element(By.CSS_SELECTOR, 'div:nth-child(14) > div:nth-child(1) > div > div > div > label')\n",
+    "    active.click()\n",
+    "except:\n",
+    "    print (\"can't click the checkbox\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4466258-3d70-4d6f-8a49-87dfd7962e78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #Login to Dashboard\n",
     "\n",
-    "loginbutton= driver.find_element_by_xpath('//*[@id=\"app\"]/div[13]/div/div[1]/aside/div[1]/a')\n",
-    "loginbutton.click()\n",
-    "\n",
-    "\n"
+    "# # Clicking login text/link\n",
+    "# try:\n",
+    "#     loginelement = WebDriverWait(driver, 10).until(\n",
+    "#         EC.element_to_be_clickable((By.LINK_TEXT, \"Login\"))\n",
+    "#     )\n",
+    "#     loginelement.click()\n",
+    "# except:\n",
+    "#     print('wait')\n",
+    "    \n",
+    "# # loginelement = driver.find_element(By.LINK_TEXT,\"Login\").click()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "8cb17e5f-7789-4c3f-b117-8ec663ef97ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Sending in Username and Password\n",
+    "# try:\n",
+    "#     email = WebDriverWait(driver, 10).until(\n",
+    "#         EC.element_to_be_clickable((By.CSS_SELECTOR, 'div[class =\"v-text-field__slot\"]'))\n",
+    "#     )\n",
+    "#     email.clear()\n",
+    "#     email.send_keys(\"francismaduakor7@gmail.com\")\n",
+    "# except:\n",
+    "#     print('Error: Could not find element, failed to input email')\n",
+    "    \n",
+    "    \n",
+    "# email= driver.find_element(By.CSS_SELECTOR, 'input#') # sending email\n",
+    "# email.clear()\n",
+    "# email.send_keys(\"francismaduakor7@gmail.com\")\n",
+    "\n",
+    "# pwd= driver.find_element(By.CSS_SELECTOR,'div[id=\"editing-view-port\"]') # sendig password\n",
+    "# pwd.send_keys(\"qwerty123aA@\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "# email = driver.find_element(By.CSS_SELECTOR,'input[aria-label=\"Email*\"]')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e284375c-cd7a-4c2f-acc3-26a6b986d462",
    "metadata": {},
    "outputs": [],
    "source": []
