--- a/Scrape_Script.ipynb
+++ b/Scrape_Script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 327,
    "id": "94077bdc-b7d7-4043-8324-6e38d38c0c20",
    "metadata": {},
    "outputs": [],
@@ -29,19 +29,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 328,
    "id": "8f81c82c-bced-4bff-80ff-81bb0e882c4a",
    "metadata": {},
    "outputs": [],
    "source": [
     "driver.implicitly_wait(10)\n",
-    "driver.get(\"https://www.startupsg.gov.sg/directory/startups/?sort=-changed&q\") # getting website\n",
+    "driver.get(\"https://www.startupsg.gov.sg/directory/startups/\") # getting website\n",
     "driver.maximize_window() # maximizing browser window"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 329,
    "id": "d303ca37-118c-48df-bc87-124c81efcfe7",
    "metadata": {},
    "outputs": [],
@@ -54,49 +54,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 330,
    "id": "3abd239d-b2a5-48c0-aa28-b6c2df379b99",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Filter Funding Stage\n",
-    "stage = driver.find_element(By.CSS_SELECTOR,'div.filter.directory__filter.active > div.filter-panel > div > div:nth-child(2) > div > div > div > label') # selecting stage\n",
-    "stage.click()"
+    "stage = driver.find_element(By.CSS_SELECTOR,'div > div > input[aria-label*=\"Seed\"]') # selecting stage\n",
+    "driver.execute_script(\"arguments[0].click();\", stage)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 331,
    "id": "0ea456b4-f8c3-45db-a37b-ee0f3eaffc3a",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'select' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mC:\\Users\\JEFFRE~1\\AppData\\Local\\Temp/ipykernel_12012/2479600454.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# status = driver.find_element(By.TAG_NAME,'Activity Status')\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0macitve\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mselect\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdriver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_element\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mBy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mCSS_SELECTOR\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'div:nth-child(14) > div:nth-child(1) > div > div > div > label'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[0mactive\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mselect_by_visible_text\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Acitve'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'select' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#  More Filter - Active Status\n",
     "activestatus = driver.find_element(By.CSS_SELECTOR, 'div a[class*=\"link-more-filters\"]')\n",
     "activestatus.click()\n",
     "\n",
-    "try:\n",
-    "    acitve= driver.find_element(By.CSS_SELECTOR, 'div:nth-child(14) > div:nth-child(1) > div > div > div > label')\n",
-    "    active.click()\n",
-    "except:\n",
-    "    print (\"can't click the checkbox\")"
+    "\n",
+    "filteractive= driver.find_element(By.CSS_SELECTOR, 'div > div input[aria-label*=\"Active\"]') # checking the Active Checkbox\n",
+    "driver.execute_script(\"arguments[0].click();\", filteractive)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 332,
    "id": "c4466258-3d70-4d6f-8a49-87dfd7962e78",
    "metadata": {},
    "outputs": [],
@@ -117,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 333,
    "id": "8cb17e5f-7789-4c3f-b117-8ec663ef97ae",
    "metadata": {},
    "outputs": [],
