Added the Click Apply button for More Filters

--- a/Scrape_Script.ipynb
+++ b/Scrape_Script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 358,
    "id": "94077bdc-b7d7-4043-8324-6e38d38c0c20",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 359,
    "id": "8f81c82c-bced-4bff-80ff-81bb0e882c4a",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 360,
    "id": "d303ca37-118c-48df-bc87-124c81efcfe7",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 361,
    "id": "3abd239d-b2a5-48c0-aa28-b6c2df379b99",
    "metadata": {},
    "outputs": [],
@@ -66,8 +66,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
-   "id": "0ea456b4-f8c3-45db-a37b-ee0f3eaffc3a",
+   "execution_count": 362,
+   "id": "3d803037-da51-497c-8bdd-00dc68649164",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,14 +75,17 @@
     "activestatus = driver.find_element(By.CSS_SELECTOR, 'div a[class*=\"link-more-filters\"]')\n",
     "activestatus.click()\n",
     "\n",
-    "\n",
     "filteractive= driver.find_element(By.CSS_SELECTOR, 'div > div input[aria-label*=\"Active\"]') # checking the Active Checkbox\n",
-    "driver.execute_script(\"arguments[0].click();\", filteractive)\n"
+    "driver.execute_script(\"arguments[0].click();\", filteractive)\n",
+    "\n",
+    "applybutton = driver.find_element(By.XPATH,'//*[@id=\"app\"]/div[5]/div/div/div[3]/div/div/button/div') # clicking the apply button\n",
+    "# applybutton.click()\n",
+    "driver.execute_script(\"arguments[0].click();\", applybutton)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 363,
    "id": "c4466258-3d70-4d6f-8a49-87dfd7962e78",
    "metadata": {},
    "outputs": [],
@@ -103,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 364,
    "id": "8cb17e5f-7789-4c3f-b117-8ec663ef97ae",
    "metadata": {},
    "outputs": [],
