Grabbing Contact Details from Company Cards

--- a/Scrape_Script.ipynb
+++ b/Scrape_Script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 650,
    "id": "94077bdc-b7d7-4043-8324-6e38d38c0c20",
    "metadata": {},
    "outputs": [],
@@ -24,16 +24,21 @@
     "    \n",
     "driver= webdriver.Chrome()\n",
     "\n",
+    "# options = Options()\n",
+    "# options.headless = True # Make sure that chrome doesn't automatically opens up on it's own.\n",
+    "\n",
     "import pandas as pd "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 651,
    "id": "8f81c82c-bced-4bff-80ff-81bb0e882c4a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Getting the Url\n",
+    "\n",
     "driver.implicitly_wait(10)\n",
     "driver.get(\"https://www.startupsg.gov.sg/directory/startups/\") # getting website\n",
     "driver.maximize_window() # maximizing browser window"
@@ -41,51 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
-   "id": "d303ca37-118c-48df-bc87-124c81efcfe7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Selecting Funding stage\n",
-    "\n",
-    "fundingstage = driver.find_element(By.CSS_SELECTOR,'div.directory__filters > div > div > div:nth-child(2) > div > div > div') # clicking on the funding button\n",
-    "fundingstage.click()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 361,
-   "id": "3abd239d-b2a5-48c0-aa28-b6c2df379b99",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Filter Funding Stage\n",
-    "stage = driver.find_element(By.CSS_SELECTOR,'div > div > input[aria-label*=\"Seed\"]') # selecting stage\n",
-    "driver.execute_script(\"arguments[0].click();\", stage)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 362,
-   "id": "3d803037-da51-497c-8bdd-00dc68649164",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#  More Filter - Active Status\n",
-    "activestatus = driver.find_element(By.CSS_SELECTOR, 'div a[class*=\"link-more-filters\"]')\n",
-    "activestatus.click()\n",
-    "\n",
-    "filteractive= driver.find_element(By.CSS_SELECTOR, 'div > div input[aria-label*=\"Active\"]') # checking the Active Checkbox\n",
-    "driver.execute_script(\"arguments[0].click();\", filteractive)\n",
-    "\n",
-    "applybutton = driver.find_element(By.XPATH,'//*[@id=\"app\"]/div[5]/div/div/div[3]/div/div/button/div') # clicking the apply button\n",
-    "# applybutton.click()\n",
-    "driver.execute_script(\"arguments[0].click();\", applybutton)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 652,
    "id": "c4466258-3d70-4d6f-8a49-87dfd7962e78",
    "metadata": {},
    "outputs": [],
@@ -106,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 653,
    "id": "8cb17e5f-7789-4c3f-b117-8ec663ef97ae",
    "metadata": {},
    "outputs": [],
@@ -137,11 +98,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 654,
+   "id": "d303ca37-118c-48df-bc87-124c81efcfe7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Selecting Funding stage\n",
+    "\n",
+    "fundingstage = driver.find_element(By.CSS_SELECTOR,'div.directory__filters > div > div > div:nth-child(2) > div > div > div') # clicking on the funding button\n",
+    "fundingstage.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 655,
+   "id": "3abd239d-b2a5-48c0-aa28-b6c2df379b99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filter Funding Stage\n",
+    "stage = driver.find_element(By.CSS_SELECTOR,'div > div > input[aria-label*=\"Seed\"]') # selecting stage\n",
+    "driver.execute_script(\"arguments[0].click();\", stage)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 656,
+   "id": "3d803037-da51-497c-8bdd-00dc68649164",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  More Filter - Active Status\n",
+    "activestatus = driver.find_element(By.CSS_SELECTOR, 'div a[class*=\"link-more-filters\"]')\n",
+    "activestatus.click()\n",
+    "\n",
+    "filteractive= driver.find_element(By.CSS_SELECTOR, 'div > div input[aria-label*=\"Active\"]') # checking the Active Checkbox\n",
+    "driver.execute_script(\"arguments[0].click();\", filteractive)\n",
+    "\n",
+    "applybutton = driver.find_element(By.XPATH,'//*[@id=\"app\"]/div[5]/div/div/div[3]/div/div/button/div') # clicking the apply button\n",
+    "driver.execute_script(\"arguments[0].click();\", applybutton)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 657,
    "id": "e284375c-cd7a-4c2f-acc3-26a6b986d462",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Click on Company Cards \n",
+    "# Loop through every entity display name to open in new tab\n",
+    "\n",
+    "companycard= driver.find_element(By.CSS_SELECTOR, 'div[class*=\"entity__display-name\"]')\n",
+    "companycard.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 658,
+   "id": "6f953ac6-7014-49c6-ab5c-83bb87fd11b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Seed\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Grabbing Company Contact Details \n",
+    "\n",
+    "driver.switch_to.window(driver.window_handles[1]) # handles switch to window 1  \n",
+    "\n",
+    "# name = driver.find_element(By.CSS_SELECTOR, 'h4[class*=\"team__name\"]').text\n",
+    "# print(name)\n",
+    "\n",
+    "# email = driver.find_element(By.XPATH, '//*[@id=\"general\"]/div/div/div/div[2]/div/div[2]/div/ul[1]/li[3]/a').text\n",
+    "# print(email)\n",
+    "\n",
+    "# phone_number = driver.find_element(By.XPATH, '//*[@id=\"general\"]/div/div/div/div[2]/div/div[2]/div/ul[1]/li[4]/span').text\n",
+    "# print(phone_number)\n",
+    "\n",
+    "# Linkedin = driver.find_element(By.XPATH, '//*[@id=\"general\"]/div/div/div/div[2]/div/div[2]/div/ul[2]/li[3]/a')\n",
+    "# print (Linkedin.get_attribute('href'))\n",
+    "\n",
+    "\n",
+    "# company = driver.find_element(By.XPATH, '//*[@id=\"app\"]/div[7]/div/main/div/div/section/div[1]/div/section/div/div/div[1]/header/div/div[2]/h1').text\n",
+    "# print(company)\n",
+    "\n",
+    "# Employee_range = driver.find_element(By.XPATH, '//*[@id=\"general\"]/div/div/div/div[2]/div/div[1]/div/div/div[4]/div[2]').text\n",
+    "# print(Employee_range)\n",
+    "\n",
+    "Funding_round = driver.find_element(By.XPATH, '//*[@id=\"general\"]/div/div/div/div[2]/div/div[1]/div/div/div[3]/div[2]').text\n",
+    "print(Funding_round)\n",
+    "\n",
+    "driver.close() # Close the new window\n",
+    "\n",
+    "# driver.switch_to.window(driver.window_handles[0]) # handles Switching back to main window    "
+   ]
   }
  ],
  "metadata": {
