--- a/Scrape_Script.ipynb
+++ b/Scrape_Script.ipynb
@@ -226,16 +226,53 @@
     "    driver.switch_to.window(driver.window_handles[0]) # handles Switching back to main window   \n",
     "    \n",
     "    # Navigating to the next page\n",
-    "    next_button= driver.find_element(By.XPATH,'//*[@id=\"app\"]/div[13]/div/main/div/div/div/section/section/div[4]/ul/li[11]/button').click() # clicking the next button"
+    "    driver.find_element(By.XPATH,'//*[@id=\"app\"]/div[13]/div/main/div/div/div/section/section/div[4]/ul/li[11]/button').click() # clicking the next button "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
+   "id": "b0fa0e96-c9cc-43a3-9d1d-7d98b9feb59b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'First_name' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mC:\\Users\\JEFFRE~1\\AppData\\Local\\Temp/ipykernel_11040/539809310.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Concatenating the lists of details\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mContact_details\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mFirst_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mLast_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcompany_email\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mphone_number\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcompany_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0memployee_number\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcompany_stage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msocial_links\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'First_name' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Concatenating the lists of details \n",
+    "Contact_details = [First_name, Last_name, company_email, phone_number, company_name, employee_number, company_stage, social_links]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0fa0e96-c9cc-43a3-9d1d-7d98b9feb59b",
+   "id": "2a1e3306-6c6a-45bd-833d-589857ad7846",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Converting List to Pandas Dataframe\n",
+    "contacts = pd.DataFrame(Contact_details, Columns=[First_name, Last_name, company_email, phone_number, company_name, employee_number, company_stage, social_links])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "564279a8-6470-4bf9-ac4e-d4741716db92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert to excel \n",
+    "StartupSG_Contact_list= contacts.DataFrame.to_excel()"
+   ]
   },
   {
    "cell_type": "code",
