Scrape script working; need to make code better

--- a/Scrape_Script.ipynb
+++ b/Scrape_Script.ipynb
@@ -897,16 +897,8 @@
    "outputs": [],
    "source": [
     "# Convert to excel \n",
-    "contact_df.to_excel('StartupSG Contact_list.xlsx', over)"
+    "contact_df.to_excel('StartupSG Contact_list.xlsx')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "69363459-d9a3-423e-8d0f-ede4bdc53e5e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
